fixed layout issue of the dropdown cartItem

--- a/src/components/cart-dropdown/cart-dropdown.styles.css
+++ b/src/components/cart-dropdown/cart-dropdown.styles.css
@@ -7,8 +7,8 @@
     padding: 20px;
     border: 1px solid black;
     background-color: white;
-    top: 80px;
-    right: 0;
+    top: 90px;
+    right: 40px;
     z-index: 5;
 }
 
@@ -25,7 +25,7 @@
 
 .cart-dropdown .empty-message{
   font-size: 18px;
-  margin: auto;
+  margin: 50px auto;
 }
 
 /* SCSS code 
