--- a/src/components/cart-item/cart-item.styles.css
+++ b/src/components/cart-item/cart-item.styles.css
@@ -10,16 +10,24 @@
 }
 
 .cart-item .item-details {
+    
     width: 70%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     padding: 10px 20px;
 }
 
 .cart-item .item-details .name {
+
+    width: 100%;
     font-size: 16px;
+}
+.cart-item .item-details .price {
+
+  width: 100%;
+  font-size: 16px;
 }
 
 
